--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "main": "./dist/extension",
   "contributes": {
     "javaBuildFilePatterns": [
-      "pom.xml", ".gradle"
+      "^pom.xml$", ".*\\.gradle$"
     ],
     "semanticTokenTypes": [
       {
